--- a/LongitudeWatch/res/layout/activity_world_clock.xml
+++ b/LongitudeWatch/res/layout/activity_world_clock.xml
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/worldclock"
         android:layout_alignBottom="@+id/worldclock"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="16dp"
         android:layout_toRightOf="@+id/timer"
         android:text="ストップウォッチ"
         android:textSize="20dp" />
@@ -44,20 +44,47 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/clock"
         android:layout_alignBottom="@+id/clock"
-        android:layout_marginLeft="24dp"
+        android:layout_marginLeft="16dp"
         android:layout_toRightOf="@+id/stopwatch"
         android:text="世界時計"
         android:textSize="20dp" />
-
-    <TextView
-        android:id="@+id/CloclText"
+    
+    <TextClock
+        android:id="@+id/jpClock"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="203dp"
-        android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="100dp" />
+        android:layout_marginTop="80dp"
+        android:textSize="60sp"
+        android:timeZone="GMT+900"
+        android:format24Hour="HH:mm:ss"
+        android:format12Hour="hh:mm:ss" />
+    
+    <TextView
+        android:id="@+id/jpClockText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="150dp"
+        android:layout_marginLeft="70dp"
+        android:text="日本"
+        android:textSize="30dp" />
 
+    <TextClock
+        android:id="@+id/usClock"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
+        android:textSize="60sp"
+        android:timeZone="GMT-500"
+        android:format24Hour="HH:mm:ss"
+        android:format12Hour="hh:mm:ss" />
+    
+    <TextView
+        android:id="@+id/usClockText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="270dp"
+        android:layout_marginLeft="40dp"
+        android:text="ニューヨーク"
+        android:textSize="25dp" />
+    
 </RelativeLayout>
